# ai-editutor

./: .gitignore  CLAUDE.md  Makefile  README.md  performance.md  todo.txt
doc/: RAG.md  ai-mentor-roadmap.md  codebase_understand.md  codementor.txt  context-retrieval-solutions.md  editutor.txt  product-overview-simple.md  research.md  tags
docs/: context-extraction.d2
lua/codementor/: config.lua  context.lua  health.lua  hints.lua  init.lua  knowledge.lua  parser.lua  prompts.lua  provider.lua  ui.lua
lua/editutor/: async.lua  cache.lua  comment_writer.lua  config.lua  context.lua  context_strategy.lua  conversation.lua  debug_log.lua  float_window.lua  health.lua  hints.lua  import_graph.lua  init.lua  knowledge.lua  loading.lua  lsp_context.lua  lsp_library.lua  lsp_references.lua  parser.lua  project_context.lua  project_scanner.lua  (+12 more)
plugin/: codementor.lua  editutor.lua
python/: pyproject.toml
python/codementor_cli/: __init__.py  cli.py
python/editutor_cli/: __init__.py  chunker.py  cli.py  embedder.py  indexer.py  search.py
scripts/: clone_200_repos.sh  clone_test_repos.sh
tests/: BENCHMARK_RESULTS.md  README.md  adaptive_budget_spec.lua  behavior_spec.lua  benchmark.lua  call_graph_spec.lua  comment_writer_spec.lua  comprehensive_test.lua  config_spec.lua  context_relevance_spec.lua  context_spec.lua  debug_context_test.lua  debug_context_test2.lua  debug_fts_test.lua  e2e_flow_spec.lua  full_context_test.lua  generate_snapshots.lua  helpers.lua  integration_test.lua  knowledge_spec.lua  llm_payload_spec.lua  lsp_context_spec.lua  manual_lsp_test.lua  minimal_init.lua  mock_integration_test.lua  parser_spec.lua  prompts_spec.lua  query_preprocessing_spec.lua  quick_bm25_test.lua  run_integration.lua  run_tests.sh  simplified_spec.lua  snapshot_spec.lua  streaming_spec.lua  user_experience_benchmark.lua
(+126 files in other folders)
